--- a/app/src/main/res/layout/activity_add_comment__immediate_alert.xml
+++ b/app/src/main/res/layout/activity_add_comment__immediate_alert.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:minHeight="?attr/actionBarSize"
         android:background="@color/color_primary"
-        android:layout_width="match_parent"
+        android:layout_width="368dp"
         android:layout_height="56dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintLeft_creator="1"
