--- a/app/src/main/res/layout/activity_send_icecontact_alert.xml
+++ b/app/src/main/res/layout/activity_send_icecontact_alert.xml
@@ -83,12 +83,12 @@
                 android:layout_width="128dp"
                 android:layout_height="38dp"
                 android:text="Write Text Message"
-                tools:layout_editor_absoluteY="30dp"
                 android:layout_marginLeft="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginRight="8dp"
                 app:layout_constraintRight_toRightOf="parent"
-                tools:layout_editor_absoluteX="115dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="44dp" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
