--- a/app/src/main/res/layout/activity_home_alert.xml
+++ b/app/src/main/res/layout/activity_home_alert.xml
@@ -9,8 +9,23 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:background="@color/color_primary"
-        android:minHeight="?attr/actionBarSize" />
+        android:background="@color/sikander_background_login"
+        android:minHeight="?attr/actionBarSize">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CLUEX"
+            android:textColor="@color/sikander_front_login"
+            android:textStyle="bold"
+
+            android:textSize="45dp"
+            android:layout_gravity="center"
+            android:id="@+id/toolbar_title"
+            />
+
+    </android.support.v7.widget.Toolbar>
+
+
 
 
 
