--- a/app/src/main/res/layout/alert_grid_layout.xml
+++ b/app/src/main/res/layout/alert_grid_layout.xml
@@ -1,40 +1,322 @@
-<android.support.v7.widget.CardView
+<android.support.constraint.ConstraintLayout
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
-    android:layout_width="80dp"
-    android:layout_height="wrap_content"
-    card_view:cardUseCompatPadding="true"
-    card_view:cardCornerRadius="8dp"
-    android:layout_marginBottom="16dp">
+    android:layout_width="208dp"
+    android:layout_height="208dp"
 
-    <LinearLayout
-        android:orientation="vertical"
+    >
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        card_view:cardCornerRadius="20dp"
+        android:layout_marginRight="8dp"
+        card_view:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        card_view:layout_constraintLeft_toLeftOf="parent"
+        card_view:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        card_view:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        card_view:layout_constraintHorizontal_bias="0.0"
+        card_view:layout_constraintVertical_bias="0.0">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <android.support.v7.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                card_view:cardCornerRadius="30dp"
+                card_view:layout_constraintLeft_toLeftOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent"
+                card_view:layout_constraintRight_toRightOf="parent"
+                android:layout_marginBottom="8dp"
+                card_view:layout_constraintBottom_toTopOf="@+id/view2">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/country_photo"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:padding="4dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/abc"
+
+                     />
+
+            </android.support.v7.widget.CardView>
+
+
+
+
+            <View
+                android:layout_width="150dp"
+                android:layout_height="1dp"
+                android:background="#494949"
+                card_view:layout_constraintLeft_toLeftOf="parent"
+                card_view:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/view2"
+                card_view:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="84dp"
+                android:layout_marginBottom="8dp"
+                card_view:layout_constraintBottom_toTopOf="@+id/cardView4"
+                card_view:layout_constraintVertical_bias="0.0" />
+
+            <android.support.v7.widget.CardView
+                android:layout_width="120dp"
+                android:layout_height="55dp"
+                card_view:cardCornerRadius="10dp"
+                android:id="@+id/cardView4"
+                card_view:layout_constraintLeft_toLeftOf="parent"
+                card_view:layout_constraintRight_toRightOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="100dp">
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <View android:layout_width="1dp"
+                        android:layout_height="42dp"
+                        android:background="#494949"
+                        card_view:layout_constraintTop_toTopOf="parent"
+                        card_view:layout_constraintBottom_toBottomOf="parent"
+                        card_view:layout_constraintVertical_bias="0.714"
+                        android:layout_marginBottom="6dp"
+                        card_view:layout_constraintLeft_toRightOf="@+id/detail_alert_btn_xml"
+
+                        card_view:layout_constraintRight_toLeftOf="@+id/immediate_alert_btn_xml"
+
+                        card_view:layout_constraintHorizontal_bias="0.533"
+                     />
+
+
+
+                    <Button
+                        android:id="@+id/detail_alert_btn_xml"
+                        android:layout_width="51dp"
+                        android:layout_height="50dp"
+                        android:textAllCaps="false"
+                        android:background="@android:color/transparent"
+                        android:drawableTop="@drawable/detail_alert"
+                        android:drawableTint="#494949"
+                        android:text="Detail Alert"
+                        android:textColor="#494949"
+                        android:textSize="10dp"
+
+                        card_view:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginTop="2dp"
+                        card_view:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginBottom="8dp"
+                        card_view:layout_constraintVertical_bias="0.0"
+                        android:layout_marginLeft="3dp"
+                        card_view:layout_constraintLeft_toLeftOf="parent"
+
+                        card_view:layout_constraintHorizontal_bias="0.0"
+                        android:layout_marginStart="3dp" />
+
+                    <Button
+                        android:id="@+id/immediate_alert_btn_xml"
+                        android:layout_width="51dp"
+                        android:layout_height="50dp"
+                        android:text="Immediate Alert"
+                        android:textAllCaps="false"
+                        android:textSize="10dp"
+                        android:drawableTint="#494949"
+                        android:textColor="#494949"
+                        android:background="@android:color/transparent"
+                        android:drawableTop="@drawable/immediate_alert_icon"
+
+                        card_view:layout_constraintTop_toTopOf="parent"
+
+                        android:layout_marginRight="3dp"
+                        card_view:layout_constraintRight_toRightOf="parent"
+                        card_view:layout_constraintBottom_toBottomOf="parent"
+
+                        card_view:layout_constraintLeft_toRightOf="@+id/detail_alert_btn_xml"
+                        android:layout_marginLeft="8dp"
+                        card_view:layout_constraintHorizontal_bias="1.0"
+                        card_view:layout_constraintVertical_bias="0.4"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="3dp" />
+
+
+                </android.support.constraint.ConstraintLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:id="@+id/country_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:textSize="13dp"
+                android:text="@string/country_name"
+                android:textColor="@color/sikander_front_login"
+                android:gravity="center"
+
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/sikander_background_login"
+                card_view:layout_constraintLeft_toLeftOf="parent"
+                card_view:layout_constraintRight_toRightOf="parent"
+                android:layout_marginTop="8dp"
+
+                card_view:layout_constraintBottom_toBottomOf="parent"
+
+                card_view:layout_constraintHorizontal_bias="0.0"
+                card_view:layout_constraintVertical_bias="1.0"
+                card_view:layout_constraintTop_toTopOf="parent" />
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+
+
+
+<!--    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/country_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="266px"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:gravity="center"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
             android:src="@drawable/abc"
-            android:scaleType="centerCrop" />
+
+            card_view:layout_constraintLeft_toLeftOf="parent"
+            card_view:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="11dp"
+            card_view:layout_constraintBottom_toTopOf="@+id/view3" />
+
+
+        <View
+            android:layout_width="150dp"
+            android:layout_height="1dp"
+            android:background="#494949"
+            card_view:layout_constraintLeft_toLeftOf="parent"
+            card_view:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/view3"
+            android:layout_marginBottom="8dp"
+            card_view:layout_constraintBottom_toTopOf="@+id/cardView4" />
+
+        <android.support.v7.widget.CardView
+            android:layout_width="120dp"
+            android:layout_height="55dp"
+            card_view:cardCornerRadius="10dp"
+            android:id="@+id/cardView4"
+            card_view:layout_constraintLeft_toLeftOf="parent"
+            card_view:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="8dp"
+            card_view:layout_constraintBottom_toTopOf="@+id/country_name">
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <View android:layout_width="1dp"
+                    android:layout_height="42dp"
+                    android:background="#494949"
+                    card_view:layout_constraintTop_toTopOf="parent"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintVertical_bias="0.714"
+                    android:layout_marginBottom="6dp"
+                    card_view:layout_constraintLeft_toRightOf="@+id/detail_alert_btn_xml"
+
+                    card_view:layout_constraintRight_toLeftOf="@+id/immediate_alert_btn_xml"
+
+                    card_view:layout_constraintHorizontal_bias="0.533"
+                    android:id="@+id/view2" />
+
+
+
+                <Button
+                    android:id="@+id/detail_alert_btn_xml"
+                    android:layout_width="51dp"
+                    android:layout_height="50dp"
+                    android:textAllCaps="false"
+                    android:background="@android:color/transparent"
+                    android:drawableTop="@drawable/detail_alert"
+                    android:drawableTint="#494949"
+                    android:text="Detail Alert"
+                    android:textColor="#494949"
+                    android:textSize="10dp"
+
+                    card_view:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="2dp"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="8dp"
+                    card_view:layout_constraintVertical_bias="0.0"
+                    android:layout_marginLeft="3dp"
+                    card_view:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginRight="0dp"
+                    card_view:layout_constraintRight_toRightOf="@+id/view2"
+                    card_view:layout_constraintHorizontal_bias="0.0" />
+
+                <Button
+                    android:id="@+id/immediate_alert_btn_xml"
+                    android:layout_width="51dp"
+                    android:layout_height="50dp"
+                    android:text="Immediate Alert"
+                    android:textAllCaps="false"
+                    android:textSize="10dp"
+                    android:drawableTint="#494949"
+                    android:textColor="#494949"
+                    android:background="@android:color/transparent"
+                    android:drawableTop="@drawable/immediate_alert_icon"
+
+                    card_view:layout_constraintTop_toTopOf="parent"
+
+                    android:layout_marginRight="3dp"
+                    card_view:layout_constraintRight_toRightOf="parent"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+
+                    card_view:layout_constraintLeft_toRightOf="@+id/detail_alert_btn_xml"
+                    android:layout_marginLeft="8dp"
+                    card_view:layout_constraintHorizontal_bias="1.0"
+                    card_view:layout_constraintVertical_bias="0.4" />
+
+
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.v7.widget.CardView>
+
+
 
         <TextView
             android:id="@+id/country_name"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="13sp"
+
+            android:textSize="13dp"
             android:text="@string/country_name"
-            android:textColor="@color/accent_color"
+            android:textColor="@color/sikander_front_login"
             android:gravity="center"
             android:layout_below="@+id/country_photo"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
             android:layout_alignParentBottom="true"
-            android:background="@color/color_primary_dark"/>
+            android:background="@color/sikander_background_login"
+            card_view:layout_constraintLeft_toLeftOf="parent"
+            card_view:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
+            card_view:layout_constraintTop_toBottomOf="@+id/country_photo"
+            card_view:layout_constraintBottom_toBottomOf="parent"
 
-    </LinearLayout>
+            card_view:layout_constraintHorizontal_bias="0.0"
+            card_view:layout_constraintVertical_bias="1.0" />
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
+-->
+
+</android.support.constraint.ConstraintLayout>
