--- a/app/src/main/res/layout/alert_grid_layout.xml
+++ b/app/src/main/res/layout/alert_grid_layout.xml
@@ -153,7 +153,7 @@
 
             <TextView
                 android:id="@+id/country_name"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
                 android:textSize="13dp"
