--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -21,6 +21,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-       <AIzaSyDrPbvZhlendTufzDETFznjInmHQm2z1ew></AIzaSyDrPbvZhlendTufzDETFznjInmHQm2z1ew>
+       AIzaSyDrPbvZhlendTufzDETFznjInmHQm2z1ew
     </string>
 </resources>
