--- a/app/src/main/res/layout/activity_mobile_contacts.xml
+++ b/app/src/main/res/layout/activity_mobile_contacts.xml
@@ -9,33 +9,39 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_weight="1"
-        android:text="Add Contact"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        android:layout_width="172dp"
+        android:layout_height="38dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+        android:layout_weight="1"
+        android:text="Cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintVertical_bias="0.075" />
 
     <EditText android:id="@+id/inputSearch"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="Search products.."
         android:inputType="textVisiblePassword"
-        tools:layout_editor_absoluteY="3dp"
-        tools:layout_editor_absoluteX="16dp" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="362dp"
-        android:layout_height="284dp"
+        android:layout_width="373dp"
+        android:layout_height="334dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="45dp"
@@ -45,8 +51,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.384"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.833"
+        app:layout_constraintVertical_bias="0.155"
         android:id="@+id/constraintLayout">
 
 
@@ -55,9 +61,9 @@
 
         <ListView
             android:id="@+id/@android:id/list"
-            android:layout_width="wrap_content"
-            android:layout_height="281dp"
-            tools:layout_editor_absoluteX="-1dp"
+            android:layout_width="372dp"
+            android:layout_height="330dp"
+            tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="2dp"></ListView>
 
     </android.support.constraint.ConstraintLayout>
