--- a/app/src/main/res/layout/activity_send_icecontact_alert.xml
+++ b/app/src/main/res/layout/activity_send_icecontact_alert.xml
@@ -10,15 +10,14 @@
         android:id="@+id/cardView3"
         android:layout_width="362dp"
         android:layout_height="480dp"
-        android:layout_marginBottom="102dp"
+        android:layout_marginBottom="101dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintHorizontal_bias="0.484">
+        android:layout_marginEnd="8dp">
 
 
         <android.support.constraint.ConstraintLayout
@@ -28,19 +27,22 @@
             <EditText
                 android:id="@+id/editText2"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
-                android:layout_width="327dp"
-                android:layout_height="284dp"
+                android:layout_width="313dp"
+                android:layout_height="109dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="7dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@color/bg_main"
+                android:background="@color/cardview_light_background"
                 android:ems="10"
                 android:inputType="textMultiLine"
+                android:textCursorDrawable= "@null"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.529"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.242" />
 
             <Button
                 android:id="@+id/btnSendSMS"
@@ -55,8 +57,8 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editText2"
-                app:layout_constraintHorizontal_bias="0.126"
-                app:layout_constraintVertical_bias="0.794" />
+                app:layout_constraintHorizontal_bias="0.118"
+                app:layout_constraintVertical_bias="0.126" />
 
 
             <Button
@@ -69,26 +71,27 @@
                 android:layout_marginTop="8dp"
                 android:text="Cancel"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.79"
+                app:layout_constraintHorizontal_bias="0.771"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editText2"
-                app:layout_constraintVertical_bias="0.764" />
-
-
+                app:layout_constraintVertical_bias="0.126" />
 
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="128dp"
-                android:layout_height="38dp"
-                android:text="Write Text Message"
+                android:layout_width="274dp"
+                android:layout_height="62dp"
                 android:layout_marginLeft="8dp"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginRight="8dp"
+                android:layout_marginTop="31dp"
+                android:text="Write Text Message"
+                android:textColor="@color/bg_register"
+                android:textSize="50sp"
+                app:layout_constraintHorizontal_bias="0.652"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="44dp" />
+                app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
