--- a/app/src/main/res/layout/activity_home_alert.xml
+++ b/app/src/main/res/layout/activity_home_alert.xml
@@ -8,20 +8,61 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="45dp"
+
         android:background="@color/sikander_background_login"
         android:minHeight="?attr/actionBarSize">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CLUEX"
-            android:textColor="@color/sikander_front_login"
-            android:textStyle="bold"
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
 
-            android:textSize="45dp"
-            android:layout_gravity="center"
-            android:id="@+id/toolbar_title"
-            />
+                android:src="@drawable/cluex_logo"
+                android:id="@+id/imageView2"
+
+                android:layout_marginLeft="7dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+
+                app:layout_constraintBottom_toTopOf="@+id/view"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintVertical_bias="1.0" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LUEX"
+                android:textColor="@color/sikander_front_login"
+                android:textSize="20dp"
+                android:id="@+id/toolbar_title"
+
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="158dp"
+                app:layout_constraintLeft_toRightOf="@+id/imageView2"
+                android:layout_marginLeft="4dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="14dp"
+                app:layout_constraintHorizontal_bias="0.0" />
+            <View
+                android:layout_width="100dp"
+                android:layout_height="1dp"
+                android:background="@color/sikander_front_login"
+                android:id="@+id/view"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintVertical_bias="1.0"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="@+id/imageView2"
+                android:layout_marginRight="0dp"
+                app:layout_constraintRight_toRightOf="@+id/toolbar_title"
+                app:layout_constraintHorizontal_bias="0.47" />
+
+        </android.support.constraint.ConstraintLayout>
+
 
     </android.support.v7.widget.Toolbar>
 
