--- a/app/src/main/res/layout/alert_grid_layout.xml
+++ b/app/src/main/res/layout/alert_grid_layout.xml
@@ -27,8 +27,7 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.CardView
                 android:layout_width="wrap_content"
@@ -42,20 +41,13 @@
                 card_view:layout_constraintBottom_toTopOf="@+id/view2">
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/country_photo"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
                     android:padding="4dp"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/abc"
-
-                     />
-
+                    android:src="@drawable/abc" />
             </android.support.v7.widget.CardView>
-
-
-
-
             <View
                 android:layout_width="150dp"
                 android:layout_height="1dp"
