--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,17 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.cluex.Activities.HomeAlertActivity">
 
+    <item
 
-    <item android:id="@+id/action_settings"
+        android:id="@+id/home_page_alert_toolbar_camera_icon"
+        android:icon="@drawable/camera_logo"
+        android:orderInCategory="1"
+        android:title="@string/action_refresh"
+        app:showAsAction="always" />
+
+
+    <item android:id="@+id/home_page_alert_toolbar_logout_icon"
         android:title="@string/action_logout"
-        android:orderInCategory="100"
+        android:orderInCategory="2"
+        android:icon="@drawable/logout"
+        app:showAsAction="always" />
+
+    <item android:id="@+id/home_page_alert_toolbar_settings_icon"
+        android:title="@string/action_settings"
+        android:orderInCategory="3"
         app:showAsAction="never" />
 
-    <item android:id="@+id/action_refresh"
-        android:title="@string/action_refresh"
-        android:icon="@drawable/ic_action_refresh"
-        android:orderInCategory="200"
-        app:showAsAction="ifRoom" />
+
+
+
+
+
+
 
 
 </menu>
