--- a/app/src/main/res/layout/activity_detail_alert_map.xml
+++ b/app/src/main/res/layout/activity_detail_alert_map.xml
@@ -42,6 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@android:drawable/ic_menu_close_clear_cancel"
+                    android:onClick="onClickCancelAlert"
                     android:background="#000" />
 
                 <TextView
