--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_primary"
+    android:background="@color/sikander_background_login"
     tools:context="com.example.cluex.Activities.SplashScreen">
 
     <ImageView
@@ -19,14 +19,16 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintVertical_bias="0.388" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="192dp"
-        android:layout_height="49dp"
+        android:layout_width="138dp"
+        android:layout_height="42dp"
         android:text="CLUEX"
-        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textColor="@color/sikander_front_login"
         android:textSize="45sp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -36,7 +38,6 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.586"
-        app:layout_constraintVertical_bias="0.259" />
+        app:layout_constraintVertical_bias="0.006" />
 
 </android.support.constraint.ConstraintLayout>
