--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -40,7 +40,9 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="8dp"
                 app:layout_constraintVertical_bias="0.4"
-                app:layout_constraintHorizontal_bias="0.0">
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp">
 
                 <ImageView
                     android:layout_width="35dp"
@@ -95,7 +97,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/recycler_card_view_xml"
         android:layout_width="0dp"
-        android:layout_height="540dp"
+        android:layout_height="543dp"
 
 
         android:layout_marginBottom="8dp"
